@@ -1,6 +1,6 @@
 2007-12-04  Ludovic Courtès  <ludo@gnu.org>
 
-	* NEWS: Mention `accept' bug fix.
+	* NEWS: Mention `accept' and `scm_c_{read,write}' bug fixes.
 
 2007-12-03  Ludovic Courtès  <ludo@gnu.org>
 
