@@ -13,6 +13,7 @@ Changes in 1.8.4 (since 1.8.3)
 ** Fixed a segmentation fault which occurred when displaying the
 backtrace of a stack with a promise object (made by `delay') in it.
 ** Make `accept' leave guile mode while blocking
+** `scm_c_read ()' and `scm_c_write ()' now type-check their port argument
 
 * New modules (see the manual for details)
 
